--- a/supervisord.conf
+++ b/supervisord.conf
@@ -21,10 +21,10 @@ file=/tmp/supervisor.sock   ; (the path to the socket file)
 ;password=123               ; (default is no password (open server))
 
 [supervisord]
-logfile=/tmp/supervisord.log ; (main log file;default $CWD/supervisord.log)
+logfile=/var/log/supervisord.log ; (main log file;default $CWD/supervisord.log)
 logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
 logfile_backups=10           ; (num of main logfile rotation backups;default 10)
-loglevel=info                ; (log level;default info; others: debug,warn,trace)
+loglevel=debug                ; (log level;default info; others: debug,warn,trace)
 pidfile=/tmp/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 nodaemon=false               ; (start in foreground if true;default false)
 minfds=1024                  ; (min. avail startup file descriptors;default 1024)
@@ -57,7 +57,8 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ; supervisor.
 
 [program:twitter_stream_listener]
-command=python listen_to_twitter_stream.py
+directory=/opt/mbsaa/aggregator/scripts
+command=python listen_to_twitter_stream.py conf.yml
 
 ;[program:theprogramname]
 ;command=/bin/cat              ; the program (relative uses PATH, can take args)
