Finished forum parsing, Adding hotel review parsing

--- a/scripts/conf.yml
+++ b/scripts/conf.yml
@@ -6,6 +6,10 @@ OAUTH:
     ACCESS_TOKEN: 9582312-YaCYXFnKqzx0ACzEdxKB28wgz9jJInyvof7jw8VBLd
     ACCESS_TOKEN_SECRET: 5VKjpNvuQRubWtwgyDyNqkIFTqrEzLJdUgM3hy1JK05vM
 
+REDIS_SETTINGS:
+    TWITTER_DB: 0
+    TRIPADVISOR_DB: 1
+    SKYSCRAPER_DB: 2
 
 TWITTER:
     HASHTAGS:
