Adding a working skyscraper spider + passing city list in a config file to both spiders

--- a/scripts/conf.yml
+++ b/scripts/conf.yml
@@ -32,7 +32,7 @@ TWITTER:
 
     CITIES:
         - chicago
-        - new york
+        - new york city
         - boston
 
     LANGUAGES:
@@ -46,3 +46,12 @@ TRIPADVISOR:
     URL: http://www.tripadvisor.com
     CITIES:
         - chicago
+        - new york city
+        - boston
+
+SKYSCRAPER:
+    URL: http://forum.skyscraperpage.com
+    CITIES:
+        - chicago
+        - new york
+        - boston
